# shipstation_integration

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  .releaserc.json  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
.github/helper/: install.sh  site_config.json
.github/workflows/: frappe.yml  lint.yaml
shipstation_integration/: customer.py  hooks.py  items.py  modules.txt  orders.py  patches.txt  setup.py  shipments.py  shipping.py  utils.py  webhooks.py
shipstation_integration/config/: desktop.py  docs.py
shipstation_integration/hook_events/: item.py
shipstation_integration/hook_functions/: shopify.py
shipstation_integration/patches/: delete_delivery_note_shipment_custom_fields.py  set_enable_checks_in_shipstation_store.py  update_order_item_ids.py  update_shipstation_warehouses.py
shipstation_integration/public/: build.json
shipstation_integration/public/js/: delivery_note.js  sales_order.js  shipping.js  shipstation_integration.bundle.js
shipstation_integration/shipstation_integration/doctype/shipstation_item_custom_field/: shipstation_item_custom_field.json  shipstation_item_custom_field.py
shipstation_integration/shipstation_integration/doctype/shipstation_item_custom_fields/: shipstation_item_custom_fields.json  shipstation_item_custom_fields.py
shipstation_integration/shipstation_integration/doctype/shipstation_item_field/: error.txt  shipstation_item_field.js  shipstation_item_field.json  (+2 more)
shipstation_integration/templates/includes/: carriers.html
(+12 files in other folders)
