[project]
name = "shipstation_integration"
authors = [
    { name = "Parsimony LLC", email = "developers@parsimony.com"}
]
description = "Shipstation integration for ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "shipstation-client @ git+https://github.com/ParsimonyGit/shipstation-client.git@master#egg=shipstation-client"
]

[build-system]
requires = ['flit_core>=3.2,<4']
build-backend = 'flit_core.buildapi'

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
indent = "\t"
